[tool.poetry]
name = "line-n"
version = "0.1.0"
description = ""
authors = ["Felipe Duque <felipe89.duque@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "1.26"
scipy = "1.13"
matplotlib = "3.8"
ipykernel = "6.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
